background images added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
               <p>All private companies who receive public money to deliver public services must be subject to the same requirements as governments when it comes to transparency. It’s time for secrecy in outsourced contracts to stop. Sign the petition now.</p>
 
             </div>
+            <img src="img/note1.png" alt="" class="note" id="note1" data-stellar-ratio="0.9" />
+            <img src="img/note3.png" alt="" class="note" id="note2" data-stellar-ratio="0.8" />
+            <img src="img/note2.png" alt="" class="note" id="note3" data-stellar-ratio="0.7" />
+            <img src="img/note4.png" alt="" class="note" id="note4" data-stellar-ratio="0.6" />
+            <img src="img/note3.png" alt="" class="note" id="note5" data-stellar-ratio="0.5" />
+            <img src="img/note1.png" alt="" class="note" id="note6" data-stellar-ratio="0.4" />
+            <img src="img/note2.png" alt="" class="note" id="note7" data-stellar-ratio="0.3" />
+            <!--<img src="img/note4.png" alt="" class="note" id="note8" data-stellar-ratio="0.2" />-->
           </div>
         </section>
         
