tidy up header links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="container">
             <p>Every year</p>
             <h1>millions of dollars of public money are  lost </h1>
-            <p>to <a href="#fraud" data-slide="fraud">fraud</a>, <a href="#corruption" data-slide="corruption">corruption</a> and <a href="#outsourcing" data-slide="outsourcing">lining the pockets of giant corporations who fail to deliver on their contracts</a>.</p>
+            <p>to <a class="scrollto" href="#fraud" data-slide="fraud">fraud</a>, <a class="scrollto" href="#corruption" data-slide="corruption">corruption</a> and <a class="scrollto" href="#outsourcing" data-slide="outsourcing">lining the pockets</a> of giant corporations who fail to deliver on their contracts.</p>
           </div>
           <div class="money top">
             <div class="container">
@@ -92,8 +92,8 @@
             <img src="img/note4.png" alt="" class="note" id="note4" data-stellar-ratio="0.6" />
             <img src="img/note3.png" alt="" class="note" id="note5" data-stellar-ratio="0.5" />
             <img src="img/note1.png" alt="" class="note" id="note6" data-stellar-ratio="0.4" />
-            <img src="img/note2.png" alt="" class="note" id="note7" data-stellar-ratio="0.3" />
-            <!--<img src="img/note4.png" alt="" class="note" id="note8" data-stellar-ratio="0.2" />-->
+            <!--<img src="img/note2.png" alt="" class="note" id="note7" data-stellar-ratio="0.3" />
+            <img src="img/note4.png" alt="" class="note" id="note8" data-stellar-ratio="0.2" />-->
           </div>
         </section>
         
