--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
         <script src="//assets.okfn.org/themes/okfn/collapse.min.js" type="text/javascript"></script>
         <script src="//assets.okfn.org/themes/okfn/okf-panel.js" type="text/javascript"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            ga('create','UA-33874954-7');ga('send','pageview');
         </script>
     </body>
 </html>
