--- a/index.html
+++ b/index.html
@@ -100,7 +100,37 @@
         <footer class="footer">
           <div class="container gradient">
             <h5>Supported by</h5>
-            logos
+            <div class="logos">
+              <img src="img/okf.png" width="200" alt="Open Knowledge Foundation" />
+            </div>
+            <p>The Stop Secret Contracts campaign is coordinated by the Open Knowledge Foundation and supported by the following groups and organisations from around the world.</p>
+            <div class="supportors">
+              <div class="column">
+                <h6>International</h6>
+                <ul>
+                  <li>Transparency International</li>
+                  <li>Open Contracting Partnership</li>
+                </ul>
+              </div>
+              <div class="column">
+                <h6>Africa</h6>
+                <ul>
+                  <li>[organisation name], [country]</li>
+                </ul>
+              </div>
+              <div class="column">
+                <h6>Asia</h6>
+                <ul>
+                  <li>[organisation name], [country]</li>
+                </ul>
+              </div>
+              <div class="column">
+                <h6>Europe</h6>
+                <ul>
+                  <li>[organisation name], [country]</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </footer>
         
