Added names and links for supporting organisations

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="content">
               <h2 id="why" data-slide="why" class="slide">Why this matters</h2>
               <p>Governments around the world spend <a href="http://www.open-contracting.org/open_contracting_factivists_fighting_procureaucrats" target="_blank">over $9.5 trillion each year</a> buying goods and services through public contracts.</p>
-              <p>But citizens are denied access to information about who gets this money, what was agreed and what it buys for them.</p>
+              <p>But citizens are denied access to information about who gets this money, how it was awarded, what was agreed and what it buys for them.</p>
               <p>Without proper transparency and accountability, vast sums of public money will continue to be lost to fraud, corruption, overcharging, and under-delivery by private contractors.</p>
               <p>People everywhere should be able to see where public money goes and what it buys to enable essential public interest advocacy, reporting and reforms.</p>
               
@@ -101,27 +101,96 @@
           <div class="container gradient">
             <h5>Supported by</h5>
             <div class="logos">
-              <img src="img/okf.png" width="200" alt="Open Knowledge Foundation" />
+              <a href="http://okfn.org" target="_blank"><img src="img/okf.png" width="200" alt="Open Knowledge Foundation" /></a>
             </div>
-            <p>The Stop Secret Contracts campaign is coordinated by the Open Knowledge Foundation and supported by the following groups and organisations from around the world.</p>
+            <p>The Stop Secret Contracts campaign is coordinated by the <a href="http://okfn.org" target="_blank">Open Knowledge Foundation</a> and supported by the following civil society groups and organisations from around the world. If your organisation is interested in supporting the campaign, please email <a href="mailto:contact@stopsecretcontracts.org" target="_blank">contact@stopsecretcontracts.org</a></p>
             <div class="supportors">
               <h6>International</h6>
               <ul>
-                <li>Transparency International</li>
-                <li>Open Contracting Partnership</li>
+
+                <li><a href="http://www.globalwitness.org/" target="_blank">Global Witness</a></li>
+
+                <li><a href="http://www.integrityaction.org/" target="_blank">Integrity Action</a></li>
+
+                <li><a href="http://internationalbudget.org/" target="_blank">International Budget Partnership</a></li>
+
+                <li><a href="http://www.open-contracting.org/" target="_blank">Open Contracting Partnership</a></li>
+
+                <li><a href="http://www.publishwhatyoufund.org/" target="_blank">Publish What You Fund</a></li>
+
+
+                <li><a href="http://sunlightfoundation.com/" target="_blank">Sunlight Foundation</a></li>
+
+                <li><a href="http://www.transparency.org/" target="_blank">Transparency International</a></li>
+
+                <li><a href="http://www.webfoundation.org/" target="_blank">World Wide Web Foundation</a></li>
+
+
               </ul>
               <h6>Africa</h6>
               <ul>
-                <li>[organisation name], [country]</li>
+	                <li><a href="http://africanmediainitiative.org/" target="_blank">African Media Initiative</a></li>
+                <li><a href="http://investigativecenters.org/" target="_blank">African Network of Centers for Investigative Reporting (ANCIR)</a></li>
+                <li><a href="http://www.codeforafrica.org/" target="_blank">Code for Africa</a></li>
+
+                <li><a href="" target="_blank">Commission Diocesaine Justice et Paix</a>, <em>Democratic Republic of the Congo</em></li>
+
+                <li><a href="http://chirezifoundation.org/" target="_blank">Fondation Chirezi</a>, <em>Democratic Republic of the Congo</em></li>
+
+
+                <li><a href="https://www.facebook.com/pages/Institute-for-Research-and-Democratic-Development/207567522722780" target="_blank">Institute for Research and Democratic Development</a>, <em>Liberia</em></li>
+
+                <li><a href="http://www.nta.or.ke/" target="_blank">National Taxpayers Association</a>, <em>Kenya</em></li>
+
+                <li><a href="http://www.nmjd.org/home/" target="_blank">Network Movement for Justice and Development</a>, <em>Sierra Leone</em></li>
+
+
+                <li><a href="http://www.socialjustice-ci.net/" target="_blank">Social Justice in Cote d'Ivoire</a>, <em>Côte d'Ivoire</em></li>
+
+                <li><a href="https://www.facebook.com/SocietyforCivicDevelopment" target="_blank">Society for Civic Development</a>, <em>South Sudan</em></li>
+
               </ul>
+
               <h6>Asia</h6>
               <ul>
-                <li>[organisation name], [country]</li>
+                <li><a href="" target="_blank">Campaign for Human Rights And Social Transformation</a>, <em>Nepal</em></li>
               </ul>
+
+              <h6>Australia</h6>
+              <ul>
+                <li><a href="" target="_blank">Luta Hamutuk</a>, <em>Timor Leste</em></li>
+              </ul>
+
+
+
               <h6>Europe</h6>
               <ul>
-                <li>[organisation name], [country]</li>
+                 <li><a href="http://www.access-info.org/" target="_blank">Access Info Europe</a></li>
+                 <li><a href="http://weownit.org.uk/" target="_blank">We Own It</a>, <em>United Kingdom</em></li>
               </ul>
+
+              <h6>Middle East</h6>
+              <ul>
+                <li><a href="http://ppi.integrityaction.org/partners/kyrgyzstan/insan-leilek" target="_blank">Insan Leilek</a>, <em>Kyrgyzstan</em></li>
+                <li><a href="http://www.iwaweb.org" target="_blank">Integrity Watch Afghanistan</a>, <em>Afghanistan</em></li>
+
+<li><a href="http://www.teachercc.org/" target="_blank">Teacher Creativity Center</a>, <em>Palestine</em></li>
+
+              </ul>
+
+              <h6>North America</h6>
+              <ul>
+                <li><a href="" target="_blank">Institute for Research and Democratic Development (IREDD)</a>, <em>Liberia</em></li>
+              </ul>
+
+              <h6>South America</h6>
+              <ul>
+                <li><a href="" target="_blank">Institute for Research and Democratic Development (IREDD)</a>, <em>Liberia</em></li>
+              </ul>
+
+
+
+
             </div>
           </div>
         </footer>
