--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
               <p>All private companies who receive public money must be subject to the same transparency requirements as governments when it comes to the goods and services they deliver. It’s time for secrecy around outsourced contracts to stop. <a class="scrollto" href="#sign" data-slide="sign">Sign the petition now.</a></p>
 
               <h2 id="share" data-slide="share" class="slide">What can you do?</h2>
-              <p>If you agree with us that secret contracting needs to stop, please <a class="scrollto" href="#sign" data-slide="sign">sign the petition</a>. Once you've signed, you can also:<ul>
+              <p>If you agree with us that secret contracting needs to stop, please <a class="scrollto" href="#sign" data-slide="sign">sign the petition</a>. Once you've signed, you can also:</p><ul>
 		<li><strong>Help us to tell the world</strong>. Share it on Facebook and Twitter. Tell your friends. Help us to make some noise.</li>
 		<li><strong>Share your stories and examples</strong>. If you spot an example of fraud, corruption or unaccountable outsourcing in the news, then you can <a href="mailto:contact@stopsecretcontracts.org" target="_blank">email us</a>, or Tweet using the hashtag <a href="https://twitter.com/search?q=%23SecretContracts" target="_blank">#SecretContracts</a>.</li>
 		<li><strong>Get involved</strong>. If you'd like to help to push for more transparent and accountable contracting in your country, get in touch with us via this form.</li>
 	</ul>
-	</p>
+	
 
 
             </div>
