remove border from okf logo

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="container gradient">
             <h5>Supported by</h5>
             <div class="logos">
-              <a href="http://okfn.org" target="_blank"><img src="img/okf.png" width="200" alt="Open Knowledge Foundation" /></a>
+              <a class="no-border" href="http://okfn.org" target="_blank"><img src="img/okf.png" width="200" alt="Open Knowledge Foundation" /></a>
             </div>
             <p>The Stop Secret Contracts campaign is coordinated by the <a href="http://okfn.org" target="_blank">Open Knowledge Foundation</a> and supported by the following civil society groups and organisations from around the world. If your organisation is interested in supporting the campaign, please email <a href="mailto:contact@stopsecretcontracts.org" target="_blank">contact@stopsecretcontracts.org</a></p>
             <div class="supportors">
