basic thank you message

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <![endif]-->
         <div id="okf-panel" class="collapse"><iframe src="//assets.okfn.org/themes/okfn/okf-panel.html" scrolling="no"></iframe></div>
         <div class="okfn-ribbon"><a href="http://okfn.org/" data-toggle="collapse" data-target="#okf-panel" title="Part of the Open Knowledge Foundation Network">An Open Knowledge Foundation Site</a></div>        
+        
+        <div class="redirect thanks">
+          Thank you. Your signature has been added to the list of petition signers.
+        </div>     
 
         <section class="light">
           <div class="container">
