present thank you message as popup

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="okf-panel" class="collapse"><iframe src="//assets.okfn.org/themes/okfn/okf-panel.html" scrolling="no"></iframe></div>
-        <div class="okfn-ribbon"><a href="http://okfn.org/" data-toggle="collapse" data-target="#okf-panel" title="Part of the Open Knowledge Foundation Network">An Open Knowledge Foundation Site</a></div>        
-        
-        <div class="redirect thanks">
-          Thank you. Your signature has been added to the list of petition signers.
-        </div>     
+        <div class="okfn-ribbon"><a href="http://okfn.org/" data-toggle="collapse" data-target="#okf-panel" title="Part of the Open Knowledge Foundation Network">An Open Knowledge Foundation Site</a></div>            
 
         <section class="light">
           <div class="container">
@@ -200,6 +196,11 @@
           </div>
         </footer>
         
+        <div class="redirect thanks">
+          <div class="thanks">
+            <span class="heading">Thank you</span> Your signature has been added to the list of petition signers. <a class="close" href="./">x</a>
+          </div>
+        </div> 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
