--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="//assets.okfn.org/themes/okfn/okf-panel.css"/>
+        <link rel="stylesheet" href="//assets.okfn.org/themes/okfn/okf-footer/okf-footer.css"/>
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -193,6 +194,7 @@
 
               </div>
             </div>
+            <div class="okf-footer" id="okf-footer"></div>
           </div>
         </footer>
         
@@ -210,6 +212,7 @@
         <script src="js/main.js"></script>
         <script src="//assets.okfn.org/themes/okfn/collapse.min.js" type="text/javascript"></script>
         <script src="//assets.okfn.org/themes/okfn/okf-panel.js" type="text/javascript"></script>
+        <script src="//assets.okfn.org/themes/okfn/okf-footer/okf-footer.js" type="text/javascript"></script>
 
         <!-- Google Analytics -->
         <script>
