Added new supporting orgs

--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
   
                   <li><a href="http://www.nmjd.org/home/" target="_blank">Network Movement for Justice and Development</a>, <em>Sierra Leone</em></li>
   
-  
+                  <li><a href="http://procurementmonitor.org/" target="_blank"> Public and Private Development Centre</a>, <em>Nigeria</em></li>  
+
+
                   <li><a href="http://www.socialjustice-ci.net/" target="_blank">Social Justice in Cote d'Ivoire</a>, <em>Côte d'Ivoire</em></li>
   
                   <li><a href="https://www.facebook.com/SocietyforCivicDevelopment" target="_blank">Society for Civic Development</a>, <em>South Sudan</em></li>
@@ -179,7 +181,12 @@
                 <ul>
                    <li><a href="http://www.access-info.org/" target="_blank">Access Info Europe</a></li>
 					<li><a href="http://k-monitor.hu/" target="_blank">K-Monitor</a>, <em>Hungary</em></li>
-                   <li><a href="http://weownit.org.uk/" target="_blank">We Own It</a>, <em>United Kingdom</em></li>
+                 
+                   <li><a href="http://www.cfoi.org.uk/" target="_blank">Campaign for Freedom of Information</a>, <em>United Kingdom</em></li>
+
+                   <li><a href="http://www.involve.org.uk/" target="_blank">Involve</a>, <em>United Kingdom</em></li>
+
+  <li><a href="http://weownit.org.uk/" target="_blank">We Own It</a>, <em>United Kingdom</em></li>
                 </ul>
   
                 <h6>Middle East</h6>
