--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
               <div class="logos">
                 <a class="no-border" href="http://okfn.org" target="_blank"><img src="img/okf.png" width="200" alt="Open Knowledge Foundation" /></a>
               </div>
-              <p>The Stop Secret Contracts campaign is coordinated by the <a href="http://okfn.org" target="_blank">Open Knowledge Foundation</a> and supported by the following civil society groups and organisations from around the world. If your organisation is interested in supporting the campaign, please email <a href="mailto:contact@stopsecretcontracts.org" target="_blank">contact@stopsecretcontracts.org</a></p>
+              <p>The Stop Secret Contracts campaign is coordinated by the <a href="http://okfn.org" target="_blank">Open Knowledge Foundation</a> and supported by the following civil society groups and organisations from around the world. If your organisation is interested in supporting the campaign, please email <a href="mailto:contact@stopsecretcontracts.org" target="_blank">contact@stopsecretcontracts.org</a>.</p>
+			
+	
+<p>The campaign also draws on the work of the <a href="http://www.open-contracting.org/" target="_blank">Open Contracting Partnership</a> - including the <a href="http://www.open-contracting.org/global_principles" target="_blank">Open Contracting Global Principles</a>.
+
+	
+	</p>
               <div class="supportors">
                 <h6>International</h6>
                 <ul>
@@ -125,8 +131,6 @@
                   <li><a href="http://www.integrityaction.org/" target="_blank">Integrity Action</a></li>
   
                   <li><a href="http://internationalbudget.org/" target="_blank">International Budget Partnership</a></li>
-  
-                  <li><a href="http://www.open-contracting.org/" target="_blank">Open Contracting Partnership</a></li>
   
                   <li><a href="http://www.publishwhatyoufund.org/" target="_blank">Publish What You Fund</a></li>
   
