Facebook sharing image

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Stop Secret Contracts</title>
-        <meta name="description" content="">
+        <meta name="description" content="Every year millions of dollars of public money are lost to fraud, corruption and lining the pockets of giant corporations who fail to deliver on their contracts.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta property="og:image" content="http://stopsecretcontracts.org/promo.png">
+        
         <link rel="stylesheet" href="//assets.okfn.org/themes/okfn/okf-panel.css"/>
         <link rel="stylesheet" href="//assets.okfn.org/themes/okfn/okf-footer/okf-footer.css"/>
         <link rel="stylesheet" href="css/main.css">
