--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         
         <div class="redirect thanks">
           <div class="thanks">
-            <span class="heading">Thank you</span> Your signature has been added to the list of petition signers. 
+            <span class="heading">Thank you</span> Your signature has been added to the list of petition signers.<p>Please share it:</p> 
             <div class="share">
               <a class="twitter-btn" href="http://ctt.ec/6Gsm_" title="Stop #SecretContracts! Join the call to bring #transparency and #opengov to contracts" target="_blank">Tweet</a> &nbsp; <div class="fb-share-button" data-href="http://stopsecretcontracts.org/" data-type="button"></div>
             </div>
