Updated 'What can you do' section

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
               <h2 id="share" data-slide="share" class="slide">What can you do?</h2>
               <p>If you agree with us that secret contracting needs to stop, please <a class="scrollto" href="#sign" data-slide="sign">sign the petition</a>. Once you've signed, you can also:</p><ul>
-		<li><strong>Help us to tell the world</strong>. Share it on <a href="http://www.facebook.com/share.php?u=http://stopsecretcontracts.org/" target="_blank">Facebook</a> and <a href="http://ctt.ec/6Gsm_" title="Stop #SecretContracts! Join the call to bring #transparency and #opengov to contracts" target="_blank">Twitter</a>. Tell your friends. Help us to make some noise.</li>
-		<li><strong>Share your stories and examples</strong>. If you spot an example of fraud, corruption or unaccountable outsourcing in the news, then you can <a href="mailto:contact@stopsecretcontracts.org" target="_blank">email us</a>, or Tweet using the hashtag <a href="https://twitter.com/search?q=%23SecretContracts" target="_blank">#SecretContracts</a>.</li>
+		<li><strong>Tell the world</strong>. Share it on <a href="http://www.facebook.com/share.php?u=http://stopsecretcontracts.org/" target="_blank">Facebook</a> and <a href="http://ctt.ec/6Gsm_" title="Stop #SecretContracts! Join the call to bring #transparency and #opengov to contracts" target="_blank">Twitter</a>. Tell your friends. Help us to make some noise.</li>
+		<li><strong>Share your stories</strong>. If you spot an example of fraud, corruption or unaccountable outsourcing in the news, then you can <a href="mailto:contact@stopsecretcontracts.org" target="_blank">email us</a>, or Tweet using the hashtag <a href="https://twitter.com/search?q=%23SecretContracts" target="_blank">#SecretContracts</a>.</li>
 		<li><strong>Get involved</strong>. If you'd like to help to push for more transparent and accountable contracting in your country, <a href="https://docs.google.com/a/okfn.org/forms/d/1vxUAmv03lZtHzCT2c2s8fLkasKong0oiseQZjS80awg/viewform" target="_blank">get in touch with us via this form.</li>
 		
 	</ul>
