get involved form

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="dark">
           <div class="money bottom">
             <div class="container">
-              <div class="form slide" id="sign" data-slide="sign">
+              <div class="form slide white-box" id="sign" data-slide="sign">
                 <h3>Tell world leaders to stop secret contracts now.</h3>
                 <p>People everywhere deserve to know who gets public money for what, so governments and  contractors can be held to account.</p>
                 <form action="https://sendy.okfn.org/subscribe" method="POST" accept-charset="utf-8">
@@ -94,7 +94,7 @@
               <p>If you agree with us that secret contracting needs to stop, please <a class="scrollto" href="#sign" data-slide="sign">sign the petition</a>. Once you've signed, you can also:</p><ul>
 		<li><strong>Help us to tell the world</strong>. Share it on <a href="http://www.facebook.com/share.php?u=http://stopsecretcontracts.org/" target="_blank">Facebook</a> and <a href="http://ctt.ec/6Gsm_" title="Stop #SecretContracts! Join the call to bring #transparency and #opengov to contracts" target="_blank">Twitter</a>. Tell your friends. Help us to make some noise.</li>
 		<li><strong>Share your stories and examples</strong>. If you spot an example of fraud, corruption or unaccountable outsourcing in the news, then you can <a href="mailto:contact@stopsecretcontracts.org" target="_blank">email us</a>, or Tweet using the hashtag <a href="https://twitter.com/search?q=%23SecretContracts" target="_blank">#SecretContracts</a>.</li>
-		<li><strong>Get involved</strong>. If you'd like to help to push for more transparent and accountable contracting in your country, <a href="https://docs.google.com/a/okfn.org/forms/d/1vxUAmv03lZtHzCT2c2s8fLkasKong0oiseQZjS80awg/viewform" target="_blank">get in touch with us via this form.</li>
+		<li><strong>Get involved</strong>. If you'd like to help to push for more transparent and accountable contracting in your country, <a class="get-involved-link" href="get-involved.html" target="_blank">get in touch with us via this form.</li>
 		
 	</ul>
 	
@@ -213,8 +213,8 @@
           </div>
         </footer>
         
-        <div class="redirect thanks">
-          <div class="thanks">
+        <div class="redirect modal">
+          <div class="thanks modal-content">
             <span class="heading">Thank you</span> Your signature has been added to the list of petition signers. 
             <div class="share">
               <a class="twitter-btn" href="http://ctt.ec/6Gsm_" title="Stop #SecretContracts! Join the call to bring #transparency and #opengov to contracts" target="_blank">Tweet</a> &nbsp; <div class="fb-share-button" data-href="http://stopsecretcontracts.org/" data-type="button"></div>
@@ -222,6 +222,15 @@
             <a class="close" href="./">x</a>
           </div>
         </div> 
+        
+        <div class="get-involved modal">
+          <div class="modal-content">
+             <h3>Get Involved</h3>
+             <div class="getin">
+             </div>
+             <a class="close" href="./">x</a>
+          </div>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
