--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
             <span class="heading">Thank you</span>
             <p>Your signature has been added to the list of petition signers.</p>
             <p>If you'd like to get more involved in the campaign, let us know <a href="./?page=get-involved">here</a>.</p>
+            <p>Please share the campaign:</p>
             <div class="share">
               <a class="twitter-btn" href="http://ctt.ec/6Gsm_" title="Stop #SecretContracts! Join the call to bring #transparency and #opengov to contracts" target="_blank">Tweet</a> &nbsp; <div class="fb-share-button" data-href="http://stopsecretcontracts.org/" data-type="button"></div>
             </div>
