Added partner org

--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
                  
                    <li><a href="http://www.cfoi.org.uk/" target="_blank">Campaign for Freedom of Information</a>, <em>United Kingdom</em></li>
 
+                 <li><a href="http://www.fair-play.sk/index_en.php" target="_blank">Fair-play Alliance</a>, <em>Slovakia</em></li>
+
                    <li><a href="http://www.involve.org.uk/" target="_blank">Involve</a>, <em>United Kingdom</em></li>
 
   <li><a href="http://weownit.org.uk/" target="_blank">We Own It</a>, <em>United Kingdom</em></li>
