--- a/index.html
+++ b/index.html
@@ -207,7 +207,12 @@
   <li><a href="http://www.teachercc.org/" target="_blank">Teacher Creativity Center</a>, <em>Palestine</em></li>
   
                 </ul>
-  
+
+			                <h6>South America</h6>
+			                <ul>
+			                  <li><a href="http://thacker.com.br/" target="_blank">Transparência Hacker</a>, <em>Brazil</em></li>
+
+			                </ul>
 
               </div>
             </div>
