Added Regards Citoyens

--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 
                    <li><a href="http://www.involve.org.uk/" target="_blank">Involve</a>, <em>United Kingdom</em></li>
 
+                   <li><a href="http://www.regardscitoyens.org/" target="_blank">Regards Citoyens</a>, <em>France</em></li>
+
   <li><a href="http://weownit.org.uk/" target="_blank">We Own It</a>, <em>United Kingdom</em></li>
                 </ul>
   
