--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <section class="light">
           <div class="container">
-            <p>Every year</p>
-            <h1>millions of dollars of public money are  lost </h1>
+          
+            <h1>Every year millions of dollars of public money are  lost </h1>
             <p>to <a class="scrollto" href="#fraud" data-slide="fraud">fraud</a>, <a class="scrollto" href="#corruption" data-slide="corruption">corruption</a> and <a class="scrollto" href="#outsourcing" data-slide="outsourcing">lining the pockets</a> of giant corporations who fail to deliver on their contracts.</p>
           </div>
           <div class="money top">
