--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           <div class="container">
           
             <h1>StopSecretContracts.org</h1>
-            <p><a href="">Menu Item 1</a> :: <a href="">Menu Item 2</a> :: <a href="">Menu Item 3</a> :: <a href="">Menu Item 4</a>
+<h2>Every year millions of dollars of public money are lost to fraud, corruption and lining the pockets of giant corporations who fail to deliver.</h2>
+            <p><a href="">Why it matters</a> :: <a href="">Where it's happening</a> :: <a href="">How we work</a> :: <a href="">Partners</a>
           </div>
 
 
