--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 <h3>Every year millions of dollars of public money are lost to fraud, corruption and lining the pockets of giant corporations who fail to deliver.</h3>
             <p><a href="">Why it matters</a> :: <a href="">Where it's happening</a> :: <a href="">How we work</a> :: <a href="">Partners</a>
           </div>
+<div class="content">
+<h2 id="why" data-slide="why" class="slide">Why this matters</h2>
+              <p>Governments around the world spend <a href="http://www.open-contracting.org/open_contracting_factivists_fighting_procureaucrats" target="_blank">over $9.5 trillion each year</a> buying goods and services through public contracts.</p>
+              <p>But citizens are denied access to information about who gets this money, how it was awarded, what was agreed and what it buys for them.</p>
+              <p>Without proper transparency and accountability, vast sums of public money will continue to be lost to fraud, corruption, overcharging, and under-delivery by private contractors.</p>
+              <p>People everywhere should be able to see where public money goes and what it buys to enable essential public interest advocacy, reporting and reforms.</p>
+</div>
+              
 
 
           <div class="money top">
