--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <h3>Every year millions of dollars of public money are lost to fraud, corruption and lining the pockets of giant corporations who fail to deliver.</h3>
             <p><a href="">Why it matters</a> :: <a href="">Where it's happening</a> :: <a href="">How we work</a> :: <a href="">Partners</a>
           </div>
+          </section>
+      <section class="dark">    
 <div class="container gradient">
 <div class="content">
 <h2 id="why" data-slide="why" class="slide">Why this matters</h2>
