--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <div class="col-md-5">
             <div class="social">
-              <span>Follow:</span> <i class="fa fa-facebook-square"></i> <a href="https://twitter.com/SecretContracts"><i class="fa fa-twitter"></i></a> <span>&nbsp; &nbsp;Share:</span> <a href="http://www.facebook.com/share.php?u=http://stopsecretcontracts.org/"><i class="fa fa-facebook-square"></i></a> <a href="http://ctt.ec/6Gsm_"><i class="fa fa-twitter"></i></a> <a href="mailto:contact@stopsecretcontracts.org"><i class="fa fa-envelope"></i></a>
+              <span>Follow:</span> <a href="https://www.facebook.com/pages/Stop-Secret-Contracts/245679608971687"><i class="fa fa-facebook-square"></i></a> <a href="https://twitter.com/SecretContracts"><i class="fa fa-twitter"></i></a> <span>&nbsp; &nbsp;Share:</span> <a href="http://www.facebook.com/share.php?u=http://stopsecretcontracts.org/"><i class="fa fa-facebook-square"></i></a> <a href="http://ctt.ec/6Gsm_"><i class="fa fa-twitter"></i></a> <a href="mailto:contact@stopsecretcontracts.org"><i class="fa fa-envelope"></i></a>
             </div>
           </div>
         </div>
