--- a/campaign-partners/index.html
+++ b/campaign-partners/index.html
@@ -36,7 +36,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="../contracting-around-the-world/">Contracting around the World</a></li>
                 <li><a>Our Campaign Partners</a></li>
-                <li><a href="../newsletter/">Sign up to our Campaign Newsletter</a></li>
+                <!--<li><a href="../newsletter/">Sign up to our Campaign Newsletter</a></li>-->
               </ul>
             </div>
             <!-- /.navbar-collapse --> 
