--- a/contracting-around-the-world/index.html
+++ b/contracting-around-the-world/index.html
@@ -44,7 +44,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><a>Contracting around the World</a></li>
                 <li><a href="../campaign-partners/">Our Campaign Partners</a></li>
-                <li><a href="../newsletter/">Sign up to our Campaign Newsletter</a></li>
+                <!--<li><a href="../newsletter/">Sign up to our Campaign Newsletter</a></li>-->
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
