drop 'supported by' before our logo in the footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            Supported by &nbsp; <a href="http://okfn.org/"><img src="img/okf.png" height="49" alt="Open Knowledge"/></a>
+            <a href="http://okfn.org/"><img src="img/okf.png" height="49" alt="Open Knowledge"/></a>
           </div>
           <div class="col-md-5">
             <div class="social">
