--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
+                <li><a>Home</a></li>
                 <li><a href="contracting-around-the-world/">Contracting around the World</a></li>
                 <li><a href="campaign-partners/">Our Campaign Partners</a></li>
                 <!--<li><a href="newsletter/">Sign up to our Campaign Newsletter</a></li>-->
