--- a/where-it-happens/index.html
+++ b/where-it-happens/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Stop Secret Contracts - Contracting around the World</title>
+    <title>Stop Secret Contracts - Where it Happens</title>
     <meta name="description" content="Every year millions of dollars of public money are lost to fraud, corruption and lining the pockets of giant corporations who fail to deliver on their contracts. It's time to put a stop to Secret Contracts! Join the call for transparency and open government contracting.">
     <meta property="og:title" content="Stop Secret Contracts" />
     <meta property="og:description" content="Every year millions of dollars of public money are lost to fraud, corruption and lining the pockets of giant corporations who fail to deliver on their contracts. It's time to put a stop to Secret Contracts! Join the call for transparency and open government contracting." />
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="../">Home</a></li>
-                <li><a>Contracting around the World</a></li>
+                <li><a>Where it Happens</a></li>
                 <li><a href="../how-we-work/">How We Work</a></li>
                 <li><a href="../campaign-partners/">Our Campaign Partners</a></li>
                 <!--<li><a href="../newsletter/">Sign up to our Campaign Newsletter</a></li>-->
