--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li><a>Home</a></li>
-                <li><a href="contracting-around-the-world/">Contracting around the World</a></li>
+                <li><a href="where-it-happens/">Where it Happens</a></li>
                 <li><a href="how-we-work/">How We Work</a></li>
                 <li><a href="campaign-partners/">Our Campaign Partners</a></li>
                 <!--<li><a href="newsletter/">Sign up to our Campaign Newsletter</a></li>-->
