--- a/campaign-partners/index.html
+++ b/campaign-partners/index.html
@@ -37,7 +37,7 @@
                 <li><a href="../">Home</a></li>
                 <li><a href="../where-it-happens/">Where it Happens</a></li>
                 <li><a href="../how-we-work/">How We Work</a></li>
-                <li><a>Our Campaign Partners</a></li>
+                <li><a>Campaign Partners</a></li>
                 <!--<li><a href="../newsletter/">Sign up to our Campaign Newsletter</a></li>-->
               </ul>
             </div>
