--- a/how-we-work/index.html
+++ b/how-we-work/index.html
@@ -45,7 +45,7 @@
                 <li><a href="../">Home</a></li>
                 <li><a href="../where-it-happens/">Where it Happens</a></li>
                 <li><a>How We Work</a></li>
-                <li><a href="../campaign-partners/">Our Campaign Partners</a></li>
+                <li><a href="../campaign-partners/">Campaign Partners</a></li>
                 <!--<li><a href="../newsletter/">Sign up to our Campaign Newsletter</a></li>-->
               </ul>
             </div><!-- /.navbar-collapse -->
