change the 'share your stories' content

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>We think citizens deserve utmost transparency and openness in such contracts – whether on national or local level. In reality, there is often little too no information about which companies or organisations get the contracts paid for with public money and how they deliver them.</p>
             <p>We want to change this. We think open and transparent information about public contracts is an essential part of making our democracies work. Better information is the basis to make citizens more involved, so they can ultimately shape more open, working communities and societies.</p>
             <h3>Share your stories</h3>
-            <p>Signpost us towards news stories of public money abuse or unaccountable outsourcing by email or twitter using <a href="https://twitter.com/search?q=#SecretContracts">#SecretContracts</a></p>
+            <p>Tell us about public contracts problems in your city or part of the world by <a href="mailto:contact@stopsecretcontracts.org">email</a> or twitter using <a href="https://twitter.com/search?q=#SecretContracts">#SecretContracts</a></p>
           </div>
           <div class="col-md-5">
             <div class="form white-box" id="sign">
