--- a/campaign-partners/index.html
+++ b/campaign-partners/index.html
@@ -47,7 +47,7 @@
         </nav>
         <div class="row content">
           <div class="col-md-6">
-            <p>The Stop Secret Contracts campaign is coordinated by the <a href="http://okfn.org" target="_blank">Open Knowledge Foundation</a> and supported by the following civil society groups and organisations from around the world. If your organisation is interested in supporting the campaign, please email <a href="mailto:contact@stopsecretcontracts.org" target="_blank">contact@stopsecretcontracts.org</a>.</p>
+            <p>The Stop Secret Contracts campaign is coordinated by <a href="http://okfn.org" target="_blank">Open Knowledge International</a> and supported by the following civil society groups and organisations from around the world. If your organisation is interested in supporting the campaign, please email <a href="mailto:contact@stopsecretcontracts.org" target="_blank">contact@stopsecretcontracts.org</a>.</p>
             <p>The campaign also draws on the work of the <a href="http://www.open-contracting.org/" target="_blank">Open Contracting Partnership</a> - including the <a href="http://www.open-contracting.org/global_principles" target="_blank">Open Contracting Global Principles</a>.</p>
             <div class="row">
               <div class="col-md-6">
