--- a/where-it-happens/index.html
+++ b/where-it-happens/index.html
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <a href="http://okfn.org/"><img src="../img/oki-logo.png" height="49" alt="Open Knowledge"/></a>
+            <a href="http://okfn.org/"><img src="../img/oki-logo.png" height="49" alt="Open Knowledge International"/></a>
           </div>
           <div class="col-md-5">
             <div class="social">
